unpackaged/main/default/objects/Brand_Category_Help_Mapping__mdt/Brand_Category_Help_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains the Brand, Additional Information(Category) and How can we help data with sorting order.</description>
    <label>Brand Category Help Mapping</label>
    <pluralLabel>Brand Category Help Mappings</pluralLabel>
</CustomObject>