unpackaged/main/default/objects/Brand_Category_Help_Mapping__mdt/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Free Product</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Problem with my Order</fullName>
            </value>
            <value>
                <fullName>Nutritional Information</fullName>
            </value>
            <value>
                <fullName>Value of my bottle</fullName>
            </value>
            <value>
                <fullName>Product Ingredients</fullName>
            </value>
            <value>
                <fullName>Product Shelf life</fullName>
            </value>
            <value>
                <fullName>Decanter Inquiry</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Work for us</fullName>
            </value>
            <value>
                <fullName>Be a Brand Influencer</fullName>
            </value>
            <value>
                <fullName>License our Brand</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Coupons</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Gluten</fullName>
            </value>
            <value>
                <fullName>Caramel</fullName>
            </value>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Website Question/Issue</fullName>
            </value>
            <value>
                <fullName>Free Merchandise</fullName>
            </value>
            <value>
                <fullName>Used Barrels</fullName>
            </value>
            <value>
                <fullName>Other Inquiry</fullName>
                <isActive>false</isActive>
                <label>Other Inquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>